Bug 416591 - libs-ui-kis_shape_controller_test (Child aborted)
Summary: libs-ui-kis_shape_controller_test (Child aborted)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Unittests (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-22 14:48 UTC by Halla Rempt
Modified: 2020-08-12 17:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2020-01-22 14:48:13 UTC
219/285 Testing: libs-ui-kis_shape_controller_test
219/285 Test: libs-ui-kis_shape_controller_test
Command: "/home/boud/dev/b-krita/libs/ui/tests/kis_shape_controller_test"
Directory: /home/boud/dev/b-krita/libs/ui/tests
"libs-ui-kis_shape_controller_test" start time: Jan 22 15:14 CET
Output:
----------------------------------------------------------
********* Start testing of KisShapeControllerTest *********
Config: Using QtTest library 5.13.2, Qt 5.13.2 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 7.4.0)
PASS   : KisShapeControllerTest::initTestCase()
QWARN  : KisShapeControllerTest::testSetImage() KoColor debug runtime checks are active.
QWARN  : KisShapeControllerTest::testSetImage() krita.general: "[\n0: /home/boud/dev/b-krita/libs/global/libkritaglobal.so.19(kisBacktrace()+0x46) [0x7f902d97eb66]\n1: /home/boud/dev/b-krita/libs/ui/libkritaui.so.19(KisShapeController::slotUpdateDocumentResolution()+0x175) [0x7f902f88d9f5]\n2: /home/boud/dev/b-krita/libs/ui/libkritaui.so.19(KisShapeController::setImage(KisWeakSharedPtr<KisImage>)+0x158) [0x7f902f890f48]\n3: /home/boud/dev/b-krita/libs/ui/tests/kis_shape_controller_test(KisDummiesFacadeBaseTest::testSetImage()+0x72) [0x55a246c32892]\n4: /home/boud/dev/b-krita/libs/ui/tests/kis_shape_controller_test(+0x14c0d) [0x55a246c38c0d]\n5: /usr/lib/x86_64-linux-gnu/libQt5Core.so.5(QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const+0x6a5) [0x7f902c46b1b5]\n6: /usr/lib/x86_64-linux-gnu/libQt5Test.so.5(+0x1740a) [0x7f902e9d740a]\n7: /usr/lib/x86_64-linux-gnu/libQt5Test.so.5(+0x1817d) [0x7f902e9d817d]\n8: /usr/lib/x86_64-linux-gnu/libQt5Test.so.5(+0x186e1) [0x7f902e9d86e1]\n9: /usr/lib/x86_64-linux-gnu/libQt5Test.so.5(QTest::qRun()+0x22b) [0x7f902e9d8b7b]\n10: /usr/lib/x86_64-linux-gnu/libQt5Test.so.5(QTest::qExec(QObject*, int, char**)+0xb) [0x7f902e9d8e8b]\n11: /home/boud/dev/b-krita/libs/ui/tests/kis_shape_controller_test(main+0x17b) [0x55a246c2af8b]\n12: /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f902b859b97]\n13: /home/boud/dev/b-krita/libs/ui/tests/kis_shape_controller_test(_start+0x2a) [0x55a246c2dd6a]\n]\n"
QFATAL : KisShapeControllerTest::testSetImage() ASSERT failure in KisWeakSharedPtr: "Weak pointer is not valid!", file /home/boud/dev/krita/libs/global/kis_shared_ptr.h, line 394
FAIL!  : KisShapeControllerTest::testSetImage() Received a fatal error.
   Loc: [Unknown file(0)]
Totals: 1 passed, 1 failed, 0 skipped, 0 blacklisted, 1903ms
********* Finished testing of KisShapeControllerTest *********
<end of output>
Test time =   2.05 sec
----------------------------------------------------------
Test Failed.
"libs-ui-kis_shape_controller_test" end time: Jan 22 15:14 CET
"libs-ui-kis_shape_controller_test" time elapsed: 00:00:02
----------------------------------------------------------
Comment 1 Dmitry Kazakov 2020-08-11 20:52:30 UTC
Git commit 755e4fa2e1a4a055d553d9b241981ab962faa4f1 by Dmitry Kazakov.
Committed on 11/08/2020 at 20:52.
Pushed by dkazakov into branch 'krita/4.3'.

Fix and unbreak KisShapeControllerTest

Not that it caught a real bug, but the configuration was rather dangerous
and could cause a crash in some special cases.

M  +2    -2    libs/ui/KisDocument.cpp
M  +21   -12   libs/ui/flake/kis_shape_controller.cpp
M  +2    -1    libs/ui/flake/kis_shape_controller.h
M  +12   -9    libs/ui/tests/CMakeLists.txt
M  +36   -36   libs/ui/tests/kis_dummies_facade_base_test.cpp
M  +2    -1    libs/ui/tests/kis_dummies_facade_test.cpp
M  +1    -1    libs/ui/tests/kis_node_model_test.cpp
M  +1    -2    libs/ui/tests/kis_shape_controller_test.cpp
M  +1    -1    plugins/dockers/animation/tests/timeline_model_test.cpp
M  +1    -1    plugins/dockers/layerdocker/tests/TestNodeView.cpp
M  +2    -2    sdk/tests/empty_nodes_test.h

https://invent.kde.org/graphics/krita/commit/755e4fa2e1a4a055d553d9b241981ab962faa4f1
Comment 2 Dmitry Kazakov 2020-08-12 17:53:53 UTC
Git commit c75c2297e1a985e7970ece58a15621675848017f by Dmitry Kazakov.
Committed on 12/08/2020 at 17:52.
Pushed by dkazakov into branch 'master'.

Fix and unbreak KisShapeControllerTest

Not that it caught a real bug, but the configuration was rather dangerous
and could cause a crash in some special cases.

M  +2    -2    libs/ui/KisDocument.cpp
M  +21   -12   libs/ui/flake/kis_shape_controller.cpp
M  +2    -1    libs/ui/flake/kis_shape_controller.h
M  +12   -9    libs/ui/tests/CMakeLists.txt
M  +36   -36   libs/ui/tests/kis_dummies_facade_base_test.cpp
M  +2    -1    libs/ui/tests/kis_dummies_facade_test.cpp
M  +1    -1    libs/ui/tests/kis_node_model_test.cpp
M  +1    -2    libs/ui/tests/kis_shape_controller_test.cpp
M  +1    -1    plugins/dockers/animation/tests/timeline_model_test.cpp
M  +1    -1    plugins/dockers/layerdocker/tests/TestNodeView.cpp
M  +2    -2    sdk/tests/empty_nodes_test.h

https://invent.kde.org/graphics/krita/commit/c75c2297e1a985e7970ece58a15621675848017f