Fix and unbreak KisShapeControllerTest

Not that it caught a real bug, but the configuration was rather dangerous
and could cause a crash in some special cases.

BUG:416591