libs/ui/tests/kis_shape_controller_test.cpp
@@ -30,11 +30,10 @@
 
 KisDummiesFacadeBase* KisShapeControllerTest::dummiesFacadeFactory()
 {
-
     m_doc = KisPart::instance()->createDocument();
 
     m_nameServer = new KisNameServer();
-    return new KisShapeController(m_doc, m_nameServer);
+    return new KisShapeController(m_nameServer, m_doc->undoStack());
 }
 
 void KisShapeControllerTest::destroyDummiesFacade(KisDummiesFacadeBase *dummiesFacade)
